# TestExemple

./: CMakeLists.txt  README.md
gst_plug/include/: config.h  custom_meta.h
gst_plug/plugin_a/: gstplugina.c  gstplugina.cpp
gst_plug/plugin_b/: gstpluginb.c  gstpluginb.cpp
gst_plug/src/: custom_meta.c  custom_meta.cpp
